# api/docs/swagger.json
@@ -183,7 +183,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.ResetPasswordReq"
+                            "$ref": "#/definitions/model.ResetPassword"
                         }
                     }
                 ],
@@ -202,6 +202,40 @@
                     },
                     "500": {
                         "description": "error while reading from server",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/delete": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Api for deleting a user's profile",
+                "tags": [
+                    "user"
+                ],
+                "summary": "DeleteUserProfile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -366,6 +400,17 @@
         }
     },
     "definitions": {
+        "model.ResetPassword": {
+            "type": "object",
+            "properties": {
+                "new_password": {
+                    "type": "string"
+                },
+                "old_password": {
+                    "type": "string"
+                }
+            }
+        },
         "model.UpdateUser": {
             "type": "object",
             "properties": {
@@ -470,20 +515,6 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "user.ResetPasswordReq": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "newpassword": {
-                    "type": "string"
-                },
-                "oldpassword": {
                     "type": "string"
                 }
             }
